NOTICK: Open Java modules required by OSGi Felix framework.